--- a/css/styless.css
+++ b/css/styless.css
@@ -100,7 +100,7 @@ h1,h2,h3 {
 .navegacion-principal a {
     display: block;
     text-align: center;
-    color:#000000;
+    color:#ffffff;
     text-decoration: none;
     font-size: 2rem;
     font-weight: 700;
@@ -108,8 +108,8 @@ h1,h2,h3 {
 }
 
 .navegacion-principal a:hover {
-    background-color:#414141;
-    color: #ffffff;
+    background-color:#ffd000;
+    color: #000000;
 }
 
 .hero {
