--- a/css/styless.css
+++ b/css/styless.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-    font-size: 15px; 
+    font-size: 18px; 
     background-image: linear-gradient(to top,#252424 0%, #000000 100% );
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #DFE9F3;
@@ -30,8 +30,8 @@ body {
 }
 
 iframe {
-    width: 80%; 
-    height: 500px; 
+    width: 90%; 
+    height: 550px; 
     border:double;
     border-color: aqua;
     border-radius: 10px;
@@ -39,7 +39,7 @@ iframe {
 
 .boton {
     background-color:#00ddff;
-    color:#000000;
+    color:#ffffff;
     padding: 1rem 3rem;
     margin-top: 3rem;
     font-size: 2rem;
@@ -60,6 +60,7 @@ iframe {
 
 .boton:hover {
     cursor: pointer;
+    color: #000000;
 }
 
 
@@ -136,7 +137,7 @@ h1,h2,h3 {
 }
 .contenido-hero h2, 
 .contenido-hero p {
-    color: var(--blanco);
+    color:#ffffff;
     font-size: 5rem;
 }
 .contenido-hero .ubicacion {
@@ -152,7 +153,7 @@ h1,h2,h3 {
     width: min( 60rem, 100% );
     margin: 0 auto;
     padding: 2rem;
-    border-radius: 1rem;
+    border-radius: 2rem;
 }
 
 .formulario fieldset {
@@ -164,7 +165,7 @@ h1,h2,h3 {
     text-transform: uppercase;
     font-weight: 700;
     margin-bottom: 2rem;
-    color: var(--primario);
+    color:#00ddff;
 }
 
 @media (min-width: 768px) {
@@ -184,7 +185,7 @@ h1,h2,h3 {
     margin-bottom: 1rem;
 }
 .campo label {
-    color: var(--blanco);
+    color:#ffffff;
     font-weight: bold;
     margin-bottom: .5rem;
     display: block;
